# ksa_dashboard

backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/ksa_recruit/: config.py
backend/ksa_recruit/api/: deps.py  main.py
backend/ksa_recruit/api/routers/: candidates.py  screening.py
backend/ksa_recruit/api/schemas/: candidate.py
backend/ksa_recruit/db/: mappers.py  session.py
backend/ksa_recruit/db/models/: __init__.py  _enums.py  candidate.py  screening.py  setup.py
backend/ksa_recruit/domain/: enums.py  models.py
backend/ksa_recruit/engines/: blind.py  bonus.py  pii_scrub.py  screening.py
backend/ksa_recruit/repositories/: candidate.py  rule_set.py
backend/ksa_recruit/rules/: evaluator.py  extractors.py  operators.py
backend/ksa_recruit/services/: candidate.py  screening.py
backend/scripts/: demo.py
backend/tests/: conftest.py  test_blind_pii.py  test_bonus.py  test_operators.py  test_screening.py
simulation/: 00_setup_cycle_posting.sql  01_insert_candidates.sql  02_run_screening.sql  03_human_review.sql  05_interview_setup.sql  08_final_status.sql  README.md  apply_simulation.sql  reset_simulation.sql
