[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksa-recruit-rule-engine"
version = "0.1.0"
description = "KSA 채용 MVP - 룰 평가 엔진 (결격 자동판정 / 가점 계산 / 블라인드 탐지 / PII 스크럽)"
authors = [{ name = "KSA AI융합추진팀" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
api = [
    # 다음 단계(❸)에서 추가될 의존성 placeholder
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "uvicorn[standard]>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ksa_recruit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
